--- a/oauth2-jwt-bearer.lock-8.2.1
+++ b/oauth2-jwt-bearer.lock-8.2.1
@@ -2,18 +2,23 @@
 adjunctions == 4.4
 aeson == 1.4.1.0
 ansi-terminal == 0.8.2
+appar == 0.1.4
 asn1-encoding == 0.9.5
 asn1-parse == 0.9.4
 asn1-types == 0.3.2
 async == 2.2.1
 attoparsec == 0.13.2.2
+attoparsec-iso8601 == 1.0.1.0
+auto-update == 0.1.4
 base-compat == 0.10.5
 base-orphans == 0.8
 base64-bytestring == 1.0.0.1
 basement == 0.0.8
 bifunctors == 5.5.3
 blaze-builder == 0.4.1.0
+bsb-http-chunked == 0.0.0.4
 byteable == 0.1.1
+byteorder == 1.0.4
 cabal-doctest == 1.0.6
 call-stack == 0.1.0
 case-insensitive == 1.2.0.11
@@ -30,18 +35,25 @@ cryptonite == 0.25
 data-default-class == 0.1.2.0
 distributive == 0.6
 dlist == 0.8.0.5
+easy-file == 0.2.2
 erf == 2.0.0.0
 exceptions == 0.10.0
+fast-logger == 2.4.11
 free == 5.1
 hashable == 1.2.7.0
 haskell-lexer == 1.0.2
 hedgehog == 0.6.1
 hourglass == 0.2.12
+http-api-data == 0.3.10
 http-client == 0.5.13.1
 http-client-tls == 0.3.5.3
+http-date == 0.0.8
 http-types == 0.12.2
+http2 == 1.6.4
+hvect == 0.4.0.0
 integer-logarithms == 1.0.2.2
 invariant == 0.5.1
+iproute == 1.7.6
 jose == 0.7.0.0
 kan-extensions == 5.2
 lens == 4.17
@@ -54,6 +66,7 @@ monad-control == 1.0.2.3
 monad-time == 0.3.1.0
 mtl == 2.2.2
 network == 2.8.0.0
+network-byte-order == 0.0.0.0
 network-uri == 2.6.1.0
 old-locale == 1.0.0.7
 old-time == 1.1.0.3
@@ -63,19 +76,24 @@ pem == 0.2.4
 pretty-show == 1.8.2
 primitive == 0.6.4.0
 profunctors == 5.3
+psqueues == 0.2.7.0
 QuickCheck == 2.12.6.1
 quickcheck-instances == 0.3.19
 random == 1.1
 reflection == 2.1.4
+reroute == 0.5.0.0
 resourcet == 1.2.2
 safe == 0.3.17
 scientific == 0.3.6.2
 semigroupoids == 5.3.1
 semigroups == 0.18.5
+simple-sendfile == 0.2.27
 socks == 0.5.6
+Spock-core == 0.13.0.0
 StateVar == 1.1.1.1
 stm == 2.5.0.0
 streaming-commons == 0.2.1.0
+superbuffer == 0.3.1.1
 tagged == 0.8.6
 terminal-size == 0.3.2.1
 text == 1.2.3.1
@@ -86,14 +104,23 @@ time-locale-compat == 0.1.1.5
 time-locale-compat -old-locale
 tls == 1.4.1
 transformers-base == 0.4.5.2
+transformers-bifunctors == 0.1
 transformers-compat == 0.6.2
 transformers-compat +five
+unix-compat == 0.5.1
+unix-time == 0.3.8
 unliftio-core == 0.1.2.0
 unordered-containers == 0.2.9.0
 uuid-types == 1.0.3
+vault == 0.3.1.2
 vector == 0.12.0.1
 void == 0.7.2
+wai == 3.2.1.2
+wai-extra == 3.0.24.3
+wai-logger == 2.3.2
+warp == 3.2.25
 wl-pprint-annotated == 0.1.0.1
+word8 == 0.1.3
 x509 == 1.7.4
 x509-store == 1.6.6
 x509-system == 1.6.6
